[package]
name = "JustEnoughMod"
version = "0.0.1"
edition = "2021"
license = "MIT"

[profile.dev]
opt-level = 1

[profile.dev.pacakge."*"]
opt-level = 3

[dependencies]
JustEnoughMod_core = { version="0.0.1", path = "../JustEnoughMod_core" }
bevy = { version = "0.12", features = [ "wayland" ] }
libloading = "0.8.1"
