[package]
name = "just_enough_mod"
description = "JustEnoughMod a game dedicated for modding"
version = "0.0.1"
authors = ["LDprg <lukas_4dr@gmx.at>"]
edition = "2021"
license = "MIT"

[dependencies]
just_enough_mod_core = {path = "../just_enough_mod_core"}
bevy = { version = "0.12", features = [ "wayland", "dynamic_linking", "bevy_dynamic_plugin"] }
