[package]
name = "just_enough_mod_base"
description = "The base plugin for JustEnoughMod"
version = "0.0.1"
authors = ["LDprg <lukas_4dr@gmx.at>"]
edition = "2021"
license = "MIT"


[lib]
crate-type = ["dylib"]

[dependencies]
bevy = { version = "0.12", features = [ "wayland", "dynamic_linking", "bevy_dynamic_plugin" ] }